--- a/css/health.css
+++ b/css/health.css
@@ -2,14 +2,14 @@
 @import "light.css";
 
 body {
-  background-color: var(--light-bg-color);
-  color: var(--light-text);
+  background-color: var(--bg-color);
+  color: var(--text);
 }
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: var(--dark-bg-color);
-    color: var(--dark-text);
+    background-color: var(--bg-color);
+    color: var(--text);
   }
   img {
     filter: invert(100%);
