--- a/css/light.css
+++ b/css/light.css
@@ -1,5 +1,5 @@
 :root {
-  --light-bg-color: #fff;
-  --light-obj-color: #eee;
-  --light-text: #000;
+  --bg-color: #fff;
+  --obj-color: #eee;
+  --text: #000;
 }
