--- a/css/main.css
+++ b/css/main.css
@@ -6,15 +6,8 @@
 @import "light.css";
 
 body {
-  background-color: var(--light-bg-color);
-  color: var(--light-text);
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: var(--dark-bg-color);
-    color: var(--dark-text);
-  }
+  background-color: var(--bg-color);
+  color: var(--text);
 }
 
 body {
@@ -45,7 +38,8 @@ header {
   margin-bottom: 1em;
   display: inline-block;
   border-bottom: 2px solid grey;
-  background-color: white;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 header h1 {
@@ -60,7 +54,7 @@ div.nav-links {
   grid-template-columns: auto auto auto auto auto;
   width: 50%;
   margin: auto;
-  background-color: white;
+  background-color: var(--bg-color);
 }
 
 header ul {
