--- a/css/work.css
+++ b/css/work.css
@@ -2,14 +2,14 @@
 @import "light.css";
 
 body {
-  background-color: var(--light-bg-color);
-  color: var(--light-text);
+  background-color: var(--bg-color);
+  color: var(--text);
 }
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: var(--dark-bg-color);
-    color: var(--dark-text);
+    background-color: var(--bg-color);
+    color: var(--text);
   }
   img {
     filter: invert(100%);
@@ -27,7 +27,7 @@ div.work-progress-card {
   padding: 2em;
   margin: auto;
   margin-bottom: 1em;
-  background-color: var(--light-bg-color);
+  background-color: var(--bg-color);
   border: 2px solid black;
 }
 
@@ -40,7 +40,7 @@ div.task-card {
   padding: 2em;
   width: 30vw;
   margin: auto;
-  background-color: var(--light-bg-color);
+  background-color: var(--bg-color);
   border: 2px solid black;
 }
 
